RESOLVED FIXED 251032
[macOS] TestWebKitAPI.ServiceWorkers API test failures
https://bugs.webkit.org/show_bug.cgi?id=251032
Summary [macOS] TestWebKitAPI.ServiceWorkers API test failures
Miguel Salinas
Reported 2023-01-23 12:57:48 PST
Constant failures after 257477@main: TestWebKitAPI.ServiceWorkers.SuspendServiceWorkerProcessBasedOnClientProcessesWithSeparateServiceWorkerProcess TestWebKitAPI.ServiceWorkers.SuspendServiceWorkerProcessBasedOnClientProcessesWithoutSeparateServiceWorkerProcess
Attachments
Miguel Salinas
Comment 1 2023-01-23 12:58:18 PST
Miguel Salinas
Comment 2 2023-01-23 15:15:37 PST
EWS
Comment 3 2023-01-24 12:25:22 PST
Committed 259303@main (76649060e747): <https://commits.webkit.org/259303@main> Reviewed commits have been landed. Closing PR #8996 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.