[macOS] TestWebKitAPI.ServiceWorkers API test failures https://bugs.webkit.org/show_bug.cgi?id=251032 rdar://104436315

Reviewed by Youenn Fablet.

Prevent ProcessThrottler from changing WebProcessProxy's throttle state
when testing WebProcessProxy's throttle state.

* Source/WebKit/UIProcess/WebProcessProxy.cpp:
(WebKit::WebProcessProxy::setThrottleStateForTesting):
(WebKit::WebProcessProxy::didChangeThrottleState):
* Source/WebKit/UIProcess/WebProcessProxy.h:
(WebKit::WebProcessProxy::setThrottleStateForTesting): Deleted.

Canonical link: https://commits.webkit.org/259303@main